Ajustes para acompanhar as mudanças de validação das certidões do TST e SefazDF Criação de novo decoder para Base64 Compatibilidade alterada para a versão Java 8